# falcor-compile-perf-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  DeviceWrapper.h  Object.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  ProgramReflection.cpp  README.md  Utility.h  dependencies.xml  main.cpp  path-tracer.cpp
source/: CMakeLists.txt  CpuTimer.h  DefineList.h  DeviceWrapper.cpp  DeviceWrapper.h  Object.cpp  Object.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  ProgramReflection.cpp  ProgramReflection.h  ProgramVersion.cpp  ProgramVersion.h  Types.h  Utility.h  main.cpp  path-tracer.cpp  path-tracer.h  simplest.cpp
source/shaders/Core/API/: BlitReduction.3d.slang
source/shaders/Core/Pass/: FullScreenPass.gs.slang  FullScreenPass.vs.slang
source/shaders/DiffRendering/: AggregateGradients.cs.slang  DiffDebugParams.slang  DiffMaterialData.slang  DiffSceneIO.slang  DiffSceneQuery.slang  GradientIOWrapper.slang  InverseOptimizationParams.slang  SceneGradientInfo.slang  SceneGradients.slang  SharedTypes.slang
source/shaders/Internal/MDL/: MDLRuntime.slangh
source/shaders/Internal/Scene2/: DummyRtDelegate.slangh  VertexData.slang
source/shaders/Plugins/MaterialDataGenerator/: MaterialDataShared.slang
source/shaders/Plugins/NeuralMaterialOptimizer/: LatentDictionary.slang  LearnedSampler.slang  NeuralMaterialOptimizer.cs.slang
source/shaders/RenderPasses/AccumulatePass/: Accumulate.cs.slang
source/shaders/RenderPasses/BSDFOptimizer/: BSDFOptimizer.cs.slang  BSDFOptimizerHelpers.slang  BSDFOptimizerParams.slang  BSDFViewer.cs.slang
source/shaders/RenderPasses/BSDFViewer/: BSDFViewer.cs.slang  BSDFViewerParams.slang
source/shaders/RenderPasses/DebugPasses/: Comparison.ps.slang
source/shaders/RenderPasses/DepthOfField/: DepthOfFieldClassifyBokeh.cs.slang  DepthOfFieldCombine.cs.slang  DepthOfFieldDefines.slangh  DepthOfFieldSplat.slang
source/shaders/RenderPasses/ErrorMeasurePass/: ErrorMeasurer.cs.slang
source/shaders/RenderPasses/FLIPPass/: ComputeLuminance.cs.slang  FLIPPass.cs.slang  ToneMappers.slang  flip.hlsli
source/shaders/RenderPasses/InternalPathTracer/: GeneratePaths.cs.slang  InternalPathTracerNRD.slang  NRCData.slang  NRDHelpers.slang  Params.slang  PathState.slang  ResolvePass.cs.slang  StaticParams.slang  TracePassSimpleInline.cs.slang  TracePassSimpleTraceRay.rt.slang  WorkQueues.slang
source/shaders/RenderPasses/MinimalDiffPathTracer/: BsdfGGX.slang  MaterialParamsIO.slang  MinimalDiffPathTracer.rt.slang
source/shaders/RenderPasses/MinimalPathTracer/: MinimalPathTracer.rt.slang
source/shaders/RenderPasses/ModulateIllumination/: ModulateIllumination.cs.slang
source/shaders/RenderPasses/NTCPass/: BRDF.slang
source/shaders/RenderPasses/OptixDenoiser/: ConvertBufToTex.ps.slang  ConvertMotionVectorInputs.cs.slang  ConvertNormalsToBuf.cs.slang  ConvertTexToBuf.cs.slang
source/shaders/RenderPasses/PathTracer/: ColorType.slang  GeneratePaths.cs.slang  GuideData.slang  LoadShadingData.slang  NRDHelpers.slang  Params.slang  PathState.slang  PathTracer.slang  PathTracerNRD.slang  ReflectTypes.cs.slang  ResolvePass.cs.slang  StaticParams.slang  TracePass.rt.slang  TracePassSimpleInline.cs.slang
source/shaders/RenderPasses/PixelInspectorPass/: PixelInspector.cs.slang  PixelInspectorData.slang
source/shaders/RenderPasses/PythonPathTracer/: CopyPythonData.cs.slang  GeneratePaths.cs.slang  TraceReplayMaterials.slang
source/shaders/RenderPasses/RTXDIPass/: FinalShading.cs.slang  LoadShadingData.slang  PrepareSurfaceData.cs.slang
source/shaders/RenderPasses/SDFEditor/: GUIPass.ps.slang  Marker2DSet.slang  Marker2DTypes.slang  SDFEditorTypes.slang
source/shaders/RenderPasses/SVGFPass/: SVGFAtrous.ps.slang  SVGFCommon.slang  SVGFFilterMoments.ps.slang  SVGFFinalModulate.ps.slang  SVGFPackLinearZAndNormal.ps.slang  SVGFReproject.ps.slang
source/shaders/RenderPasses/SceneDebugger/: SceneDebugger.cs.slang  SharedTypes.slang
source/shaders/RenderPasses/ScreenSpaceReSTIRPass/: FinalShading.cs.slang  LoadShadingData.slang
source/shaders/RenderPasses/SimplePostFX/: SimplePostFX.cs.slang
source/shaders/RenderPasses/TAA/: TAA.ps.slang
source/shaders/RenderPasses/TestPasses/: TestPyTorchPass.cs.slang  TestRtProgram.rt.slang
source/shaders/RenderPasses/ToneMapper/: Luminance.ps.slang  ToneMapperParams.slang  ToneMapping.ps.slang
source/shaders/RenderPasses/TransformNormalPass/: Convert.cs.slang
source/shaders/RenderPasses/VolumetricPathTracer/: PathData.slang  WorkQueue.slang
source/shaders/RenderPasses/WARDiffPathTracer/: PTUtils.slang  Params.slang  StaticParams.slang  WARDiffPathTracer.rt.slang  WarpedAreaReparam.slang
source/shaders/RenderPasses/WhittedRayTracer/: WhittedRayTracer.rt.slang  WhittedRayTracerTypes.slang
source/shaders/Rendering/Lights/: EmissiveLightSampler.slang  EmissiveLightSamplerHelpers.slang  EmissiveLightSamplerInterface.slang  EmissiveLightSamplerType.slangh  EnvMapSampler.slang  (+9 more)
source/shaders/Scene/: HitInfo.slang  HitInfoType.slang  Intersection.slang  MeshIO.cs.slang  NullTrace.cs.slang  Raster.slang  Raytracing.slang  RaytracingInline.slang  Scene.slang  SceneBlock.slang  SceneDefines.slangh  SceneRayQueryInterface.slang  SceneTypes.slang  Shading.slang  ShadingData.slang  VertexAttrib.slangh
source/shaders/ScreenSpaceReSTIR/: EvalContext.slang  EvaluateFinalSamples.cs.slang  FinalSample.slang  GIClearReservoirs.cs.slang  GIResampling.cs.slang  GIReservoir.slang  GenerateLightTiles.cs.slang  InitialResampling.cs.slang  LightSample.slang  Lights.slang  LocalEmissiveTriangle.slang  Params.slang  ReflectTypes.cs.slang  Resampling.slang  Reservoir.slang  ScreenSpaceReSTIR.slang  SpatialResampling.cs.slang  SurfaceData.slang  TemporalResampling.cs.slang  UpdateEmissiveTriangles.cs.slang
source/shaders/Testing/: UnitTest.cs.slang
source/shaders/Utils/: Attributes.slang  HostDeviceShared.slangh  NVAPI.slang  NVAPI.slangh  SlangUtils.slang
source/shaders/rtxdi/: ResamplingFunctions.hlsli  Reservoir.hlsli  RtxdiHelpers.hlsli  RtxdiMath.hlsli  RtxdiParameters.h  RtxdiTypes.h
(+559 files in other folders)
